# ProyectoV1

./: CMakeLists.txt  Equipo.cpp  Equipo.h  Excepciones.h  Incidencia.cpp  Incidencia.h  IncidenciaAlta.cpp  IncidenciaAlta.h  IncidenciaBaja.cpp  IncidenciaBaja.h  IncidenciaMedia.cpp  IncidenciaMedia.h  Mantemiento.cpp  Mantemiento.h  Mantenimiento.cpp  Mantenimiento.h  MantenimientoCorrectivo.cpp  MantenimientoCorrectivo.h  MantenimientoPredictivo.cpp  MantenimientoPredictivo.h  MantenimientoPreventivo.cpp  MantenimientoPreventivo.h  README.MD  Sistema.cpp  Sistema.h  equipos.txt  instrucciones.md  main.cpp
